# pyFDS-Evac

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: code-quality.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
assets/: geometry.wkt
assets/ISO-table21/: config.json  geometry.wkt
assets/ISO-table22/: config.json  geometry.wkt
assets/basic/: config.json  geometry.wkt
assets/demo/: README.md  config.json  config_discovery.json  config_full.json  demo.fds  geometry.wkt
assets/haspel/: config.json
assets/social_force/: config.json  geometry.wkt
docs/: fds-sampling.md  model-comparison.md  routing.md  smoke-speed-model.md
fds_data/demo/: demo.fds
materials/: haensel2014_summary.md  schroder2020_summary.md  waypoint_based_visibility_summary.md
notebooks/: fds-evac.ipynb  geometry.wkt
plans/: pyfdsevac-execution-plan.md
pyfds_evac/: config.py
pyfds_evac/core/: __init__.py  cognitive_map.py  direct_steering_runtime.py  fed.py  premovement_distributions.py  route_graph.py  scenario.py  simulation_init.py  smoke_speed.py  visibility.py
scripts/: demo_cognitive_map_vis.py  demo_vismap_phase0.py  generate_fed_guide_plot.py  generate_iso_table21_sweep.py  generate_routing_diagram.py  generate_smoke_density_speed_plot.py  inspect_fds.py  plot_route_costs.py  plot_smoke_history.py  run_familiarity_comparison.py  vis.py
specs/001-smoke-speed-model/: data-model.md  plan.md  quickstart.md  research.md  route-fed-extension-plan.md  spec.md
specs/002-route-decision/: spec.md
specs/003-route-decision/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-fed-tracking/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/006-dynamic-routing/: PLAN.md  SPEC.md
specs/007-congestion-aware-routing/: PLAN.md  SPEC.md
specs/008-visibility-aware-routing/: SPEC.md
specs/009-minimal-config-auto-routing/: SPEC.md
specs/010-vismap-cache-npz/: SPEC.md
src/: __init__.py  config.py  fdstooling.py  jpstooling.py  main.py  ploting.py  utilities.py
tests/: test_direct_steering_runtime.py  test_fed.py  test_route_graph.py  test_smoke_speed.py  test_visibility.py
(+18 files in other folders)
