[project]
name = "pyFDS-Evac"
version = "0.1.0"
description = "Fire Dynamics Simulator (FDS) evacuation modeling with visibility analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupedsim",
    "pedpy",
    "fdsvismap",
]

[project.scripts]
fds-evac = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
