[project]
name = "fds-evac"
version = "0.1.0"
description = "Fire Dynamics Simulator (FDS) evacuation modeling with visibility analysis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jupedsim",
    "pedpy",
    "fdsvismap",
    "plotly",
    "nbformat>=4.2.0",
    "matplotlib",
    "shapely",
]

[project.scripts]
fds-evac = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
